--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: The name of your action here
-description: Provide a description here
-author: Your name or organization here
+name: node-jira-cloud-action
+description: GitHub Actions to communicate with Jira Cloud
+author: aureolebigben
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
