--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "javascript-action",
-  "description": "GitHub Actions JavaScript Template",
-  "version": "0.0.0",
-  "author": "",
+  "name": "node-jira-cloud-action",
+  "description": "GitHub Actions to communicate with Jira Cloud",
+  "version": "0.0.1",
+  "author": "aureolebigben",
   "type": "module",
   "private": true,
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/aureolebigben/node-jira-cloud-action#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/aureolebigben/node-jira-cloud-action.git"
   },
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/aureolebigben/node-jira-cloud-action/issues"
   },
   "keywords": [
     "actions"
@@ -37,7 +37,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^2.0.1"
+    "@actions/core": "^2.0.1",
+    "@actions/http-client": "^2.2.3"
   },
   "devDependencies": {
     "@eslint/compat": "^1.3.2",
