--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,55 @@ ACTIONS_STEP_DEBUG=true
 
 # GitHub Actions inputs should follow `INPUT_<name>` format (case-sensitive).
 # Hyphens should not be converted to underscores!
-INPUT_MILLISECONDS=2400
+
+# Jira Cloud API credentials
+INPUT_JIRA_BASE_URL=https://your-domain.atlassian.net
+INPUT_JIRA_EMAIL=your-email@example.com
+INPUT_JIRA_API_TOKEN=your-api-token
+
+# Operation to perform (create_issue, update_issue, transition_issue, add_comment, get_issue, get_project, create_version)
+INPUT_OPERATION=create_issue
+
+# Parameters for create_issue operation
+INPUT_PROJECT_KEY=PROJECT
+INPUT_ISSUE_TYPE=Task
+INPUT_SUMMARY='Test issue created by GitHub Action'
+INPUT_DESCRIPTION='This is a test issue created by the GitHub Action.'
+# INPUT_FIELDS_JSON={"customfield_10001": "value1", "customfield_10002": "value2"}
+
+# Parameters for update_issue operation
+# INPUT_OPERATION=update_issue
+# INPUT_ISSUE_KEY=PROJECT-123
+# INPUT_DESCRIPTION='Updated description with more details.'
+# INPUT_FIELDS_JSON={"customfield_10001": "value1", "customfield_10002": "value2"}
+
+# Parameters for transition_issue operation
+# INPUT_OPERATION=transition_issue
+# INPUT_ISSUE_KEY=PROJECT-123
+# INPUT_TRANSITION_ID=31
+
+# Parameters for add_comment operation
+# INPUT_OPERATION=add_comment
+# INPUT_ISSUE_KEY=PROJECT-123
+# INPUT_COMMENT='This is a test comment added by the GitHub Action.'
+
+# Parameters for get_issue operation
+# INPUT_OPERATION=get_issue
+# INPUT_ISSUE_KEY=PROJECT-123
+
+# Parameters for get_project operation
+# INPUT_OPERATION=get_project
+# INPUT_PROJECT_KEY=PROJECT
+
+# Parameters for create_version operation
+# INPUT_OPERATION=create_version
+# INPUT_PROJECT_ID=10000
+# INPUT_VERSION_NAME='v1.0.0'
+# INPUT_VERSION_DESCRIPTION='First release version'
+# INPUT_VERSION_ARCHIVED=false
+# INPUT_VERSION_RELEASED=false
+# INPUT_VERSION_START_DATE='2025-07-30'
+# INPUT_VERSION_RELEASE_DATE='2025-08-30'
 
 # GitHub Actions default environment variables. These are set for every run of a
 # workflow and can be used in your actions. Setting the value here will override
